--- a/src/imageuploader/imageuploader.less
+++ b/src/imageuploader/imageuploader.less
@@ -180,15 +180,13 @@
         right: 1px;
         z-index: 20;
         height: 30px;
-        border-top: 1px solid #7ebf33;
         text-align: center;
-        background-color: rgba(0, 0, 0, 0.5);
 
         .view {
             flex: 1;
-            border-right: 1px solid #7ebf33;
             box-sizing: border-box;
             cursor: pointer;
+            background-color: rgba(0, 0, 0, 0.5);
 
             &:before {
                 content: "";
@@ -200,21 +198,19 @@
                 display: block;
             }
         }
-
-        .webuploader-container {
-            background: transparent;
-        }
     }
     .re-upload {
         flex: 1;
         cursor: pointer;
         height: 30px;
         line-height: 30px;
+        margin-left: 1px;
+        background-color: rgba(0, 0, 0, 0.5);
 
         .webuploader-pick {
             height: 30px;
             position: relative;
-            width: 60px;
+            width: 57px;
 
             &:before {
                 content: "";
@@ -314,7 +310,7 @@
     .o-edit-thumb {
         .re-upload {
             .webuploader-pick {
-                width:45px;
+                width: 42px;
             }
         }
     }
